[ADD] parallelize mutiple api call

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,10 @@
 airflow_settings.yaml
 __pycache__/
 astro
-.venv
+venv
 airflow-webserver.pid
 webserver_config.py
 airflow.cfg
 airflow.db
+
+upgrade-test* 
